@@ -1,14 +1,16 @@
 Version 3.0RC1 April 1, 2006
 ============================
-BUG: Ticket#88 - Unclosed HTML tag rendered in TDatePicker
-     and TColorPicker (Qiang)
+BUG: Ticket#88 - Unclosed HTML tag in TDatePicker and TColorPicker (Qiang)
 BUG: Ticket#85 - Undefined TDataGrid::setSelectedIndex (Qiang)
 BUG: Ticket#87 - Typo in IDbConnection (Qiang)
+BUG: Ticket#95 - Typo in TTemplateControl::registerContentPlaceHolder (Qiang)
 BUG: SF#1446846 - Typo in THead (Qiang)
 BUG: SF#1432624 - Incorrect documentation about caching expiry (Qiang)
 BUG: THttpSession fails when user storage module is used (Qiang)
 ENH: TDataFieldAccessor can access public class variables (Qiang)
 ENH: Pagers in TDataGrid are now enclosed within panels (Qiang)
+ENH: Ticket#92 - Support for user exception message file (Qiang)
+ENH: TPhpErrorException now shows the actual error lines (Qiang)
 NEW: TSQLMap module (Wei)
 NEW: TStack class (Qiang)
 NEW: TImageMap control (Qiang)
